--- a/design/css/style.css
+++ b/design/css/style.css
@@ -1,3 +1,20 @@
 /*
  * Основной CSS файл
  */
+ 
+
+.navbar-center{
+    margin: 0 auto;
+    display: table;
+    float:none;
+}  
+
+/* always right for all reslutuins */
+.navbar-right {
+    float: right !important;
+  }
+
+.navbar > .container .navbar-brand,
+.navbar > .container-fluid .navbar-brand {
+  margin-left: -15px;
+}
