--- a/design/css/style.css
+++ b/design/css/style.css
@@ -4,7 +4,7 @@
  
 html,body{
 	height:100%;
-	background:#F5F5F5;
+	background:#FFFFFF;
 }
 .navbar-center{
     margin: 0 auto;
@@ -22,7 +22,7 @@ html,body{
   margin-left: -15px;
 }
 
-.navbar { min-width: 400px; }
+.navbar { min-width: 400px; background: #885E4F;}
 
 textarea { resize: none }
 
@@ -66,15 +66,37 @@ h1,h2,h3,h4,h5,h6{
 	margin-left:20px;
 }
 
+
+
 .vk_btn{
-	background: #4E729A url(http://ulogin.ru/img/panel8.png) -4px 0px;
-	background-position: 0 -38px;
-	width: 32px;
-	height: 32px;
-	margin-top:20px;
+	background: #885E4F url(../images/vk-btn.svg) no-repeat;
+	background-position: 110px 10px;
+	background-size: 20%;
+	text-align: left;
+	font-family:HeliosThin;
+	src: url('../fonts/HeliosThin.otf');
+	font-size: 16px;
+	color:#FFFFFF;
+	border-color: #FFFFFF; 
+	width: 150px;
+	height: 50px;
+	margin-top:6px;
 }
+
 .vk_btn:hover{
-	opacity: .55;
+	background: #FFFFFF url(../images/vk-btn-td.svg) no-repeat;
+	background-position: 110px 10px;
+	background-size: 20%;
+	color:#885E4F;
+	/*opacity: .55;*/
+}
+
+.navbar-header{
+	color:#FFFFFF; 
+	margin-top:15px;
+	font-family:HeliosThin;
+	src: url('../fonts/HeliosThin.otf');
+	font-weight:lighter;
 }
 
 
@@ -93,9 +115,59 @@ h1,h2,h3,h4,h5,h6{
 	font-family: tahoma, arial, verdana, sans-serif, Lucida Sans;
 }
 .h1{
+	font-family:HeliosThin;
+	src: url('../fonts/HeliosThin.otf');
+	font-weight:lighter;
+	font-size: 28px;
+	text-align: center;
+	color: #4E4E4E;
 	
-	font-size: 4em;
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-	color: #ddcca3;
-	
+}
+	/* Блок коричневого цвета с текстом */
+.text-block{
+	background: #885E4F;
+}
+	/* Серый текст внутри блоков */
+.text-inblock{
+	font-family:HeliosThin;
+	src: url('../fonts/HeliosThin.otf');
+	font-weight:lighter;
+	text-align: center;
+	font-size: 20px;
+	color: #B0B0B0;
+}
+	/* Заголовок белого цвета внутри блока */
+.text-inblock-header{
+	font-family:HeliosThin;
+	src: url('../fonts/HeliosThin.otf');
+	font-weight:lighter;
+	text-align: center;
+	font-size: 28px;
+	color: #FFFFFF;
+}
+
+	/* Текст на белом фоне */ 
+.text-front{
+	font-family:HeliosThin;
+	src: url('../fonts/HeliosThin.otf');
+	font-weight:lighter;
+	font-size: 18px;
+	text-align: center;
+	color: #7D7D7D;
+}
+
+	/* Ссылки внутри блоков */
+.a-inb {
+    color: #B0B0B0; 
+    text-decoration: none; 
+}
+
+.a-inb:visited {
+    color: #B0B0B0; 
+} 
+
+.a-inb:hover {
+    color: #FFFFFF; 
+
+    text-decoration: none; 
 }
