--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+<title>Создать</title>
+<% end %>
+
 <% content_for :bar do %>
     <nav class="navbar navbar-default">      
         <div class="container-fluid">
@@ -7,13 +11,13 @@
                 </button>  
             </div>
             <div class="col-xs-8">
-              <div class="navbar-center">
+              <div class="navbar-center navbar-header">
                 <h3>Title</h3>
               </div>
             </div>
 
             <div class="col-xs-2">
-                <button type="submit" class="btn btn-default navbar-btn navbar-right">
+                <button type="button" class="btn btn-default navbar-btn navbar-right">
                 Next
                 </button>  
             </div>
@@ -26,20 +30,25 @@
 
     <form role="form">
         <div class="form-group">
-          <textarea class="form-control" id="TaskInput" rows="5" placeholder="Задание"></textarea>
+          <textarea class="form-control text-input" id="TaskInput" rows="5" placeholder="Задание"></textarea>
         </div>
 
         <div class="form-group">
-          <input class="form-control" placeholder="Награда">
+          <input class="form-control text-input" placeholder="Награда">
         </div>
 
-        <div class="form-group ">
+        <!--<div class="form-group">
           <div class="input-group date form_datetime input-group-sm">
             <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-            <input class="form-control" size="16" type="text" value="" placeholder="Неограничено" readonly>
+            <input class="form-control text-input" size="16" type="text" value="" placeholder="Неограничено" readonly>
             <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
           </div>
+        </div>-->
+
+        <div class="form-group">
+          <input class="form-control text-input" placeholder="Дата">
         </div>
+
         </form>
         
     </div>
