--- a/app/views/messages/share.html.erb
+++ b/app/views/messages/share.html.erb
@@ -1,23 +1,7 @@
 <% content_for :head do %>
 <title>Поделиться</title>
 <% end %>
-<% content_for :bar do %>
-    <nav class="navbar navbar-default">      
-        <div class="container-fluid">
-            <div class="col-xs-2">
-                <button type="button" class="btn btn-default navbar-btn navbar-left">
-                Back
-                </button>  
-            </div>
-            <div class="col-xs-8">
-              <div class="navbar-center navbar-header">
-                <h3>Title</h3>
-              </div>
-            </div>
 
-        </div>
-    </nav>
-<% end %>
 
 <div class="row">
     <div class="col-md-12 col-xs-12">
@@ -28,7 +12,7 @@
             <input class="form-control text-input" onfocus="$(this).select()" value="http://foo.bar/biz" readonly>
 
             <span class="input-group-btn">
-                <button type="button" class="btn btn-default">
+                <button type="button" class="btn">
                 Copy to clipboard
                 </button>  
             </span>
