--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,57 +1,21 @@
-<% content_for :head do %>
-<title>Создать</title>
-<% end %>
-
-<% content_for :bar do %>
-
-<% end %>
+<% provide(:title, "Создать") %>
 
 <div class="row">
     <div class="col-md-12 col-xs-12">
 
-    <form role="form">
-        <div class="form-group">
-          <textarea class="form-control text-input" id="TaskInput" rows="5" placeholder="Задание"></textarea>
-        </div>
-
-        <div class="form-group">
-          <input class="form-control text-input" placeholder="Награда">
-        </div>
-
-        <!--<div class="form-group">
-          <div class="input-group date form_datetime input-group-sm">
-            <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-            <input class="form-control text-input" size="16" type="text" value="" placeholder="Неограничено" readonly>
-            <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-          </div>
-        </div>-->
-
-        <div class="form-group">
-          <input class="form-control text-input" placeholder="Дата">
-        </div>
-
-        </form>
+    <%= form_for :job do |f|%>
+        
+        <%= f.text_area :task_text ,:class => "form-control text-input", :rows => "5", :placeholder=>"Задание",
+                        :onfocus => "if(this.value==\"\") {this.value='Пожалуйста, '}" %>
+        <br>
+        <%= f.text_field :award ,:class => "form-control text-input", :placeholder=>"Награда" %>
+        <br>
+        <%= f.text_field :date ,:class => "form-control text-input", :placeholder=>"Дата" %>
+        <br>
+        <%= f.submit "Submit", :class => "btn" %>
+    <% end %>
+  
         
     </div>
 </div>
 
-<script type="text/javascript">
-   /* function GetRoundedDate()
-    {
-        curDate = new Date();
-        curDate.setMinutes(0);
-        curDate.setHours(curDate.getHours()+1);
-        return curDate;
-    }
-    $(".form_datetime").datetimepicker({
-        format: "dd/MM/yyyy - hh:ii",
-        startDate: GetRoundedDate(),
-        initialDate: GetRoundedDate(), /* TODO: вызывать функцию GetRoundedDate единожды, и использовать полученный результат для двух полей *
-        autoclose: true,     
-        pickerPosition: "top-left",
-        minuteStep: 30,
-        todayHighlight: true,
-        minView: 1
-    });*/
-    document.getElementById("TaskInput").onfocus=function(){ if(this.value=="") this.value="Пожалуйста, " }
-</script> 
