--- a/design/css/style.css
+++ b/design/css/style.css
@@ -49,6 +49,7 @@ body { margin-top: 60px }
 }
 h1,h2,h3,h4,h5,h6{
 	color:#666;
+	text-align:center;
 }
 
 .img{
@@ -193,4 +194,18 @@ h1,h2,h3,h4,h5,h6{
 
 .avatar {
 	margin-top: 25%;
+}
+
+.main{
+	border: 1px solid #e3e3e3;
+	border-radius: 4px;
+	padding:10px;
+	font-family: 'Open Sans', sans-serif;
+}
+.caption{
+	color:#aaa;
+	font-size:1.5em;
+}
+h2.caption{
+	font-size:2.5em;
 }
