--- a/design/css/style.css
+++ b/design/css/style.css
@@ -209,3 +209,17 @@ h1,h2,h3,h4,h5,h6{
 h2.caption{
 	font-size:2.5em;
 }
+
+.avatar{
+	width:100px;
+	height:100px;
+	border:3px solid #e3e3e3;
+}
+.avat{
+	border-left:1px solid #e3e3e3;
+}
+
+.username{
+	color:#aaa;
+	font-size:1.2em;
+}
