--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,170 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Добро пожаловать на ДайПять!</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=cyrillic-ext,latin' rel='stylesheet' type='text/css'>
+ 
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+	<div class="container-fluid">
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      		<div class="container-fluid">
+      			<div class="col-md-2 col-xs-4	">
+      				<img src="images/logo_sp.svg" style="margin-top:3px" width="58" height="58" >
+      			</div>
+
+      			<div class="col-md-8 clearfix visible-md visible-lg"  >
+      				<div class="navbar-center">
+      					<h2 class="navbar-header">Первый в мире таск-менеджер для друзей!</h2>
+      				</div>
+      			</div>
+
+      			<div class="col-md-2 col-xs-14">
+        			<button type="button" class="btn btn-default navbar-btn navbar-right vk_btn">
+        			<p style="margin-top:8px">Войти через</p>
+        			</button> 
+        		</div>
+      		</div>
+    	</nav>
+			
+		<div class="row">
+			<div class="col-md-12 col-xs-12">
+				<p class="h1" style="font-size:42px">У вас есть проблема, требующая немедленного решения?</br> Кто, как не лучшие друзья сможет вам помочь!</p>
+				<p class="text-front" style="font-size:24px">Наш сервис предлагает набор удобных функций, позволяющих в три шага</br> получить помощь!</p>
+			</div>
+		</div>
+		<div class="row">
+
+			<!-- ПАНЕЛЬ С ИНСТРУКЦИЕЙ -->	
+			<div class="col-md-6 text-block">
+
+				<div class="row text-inblock-header col-xs-18">
+					<br>
+					<p> Как это работает? </p>
+					<br>
+				</div>
+
+				<!-- ПЕРВЫЙ ШАГ -->	
+				<div class="row">
+					
+
+					<div class="col-md-3 col-xs-3"> <br> <img src="images/1.svg"></div>
+					<div class="col-md-6 col-xs-6">
+						<p class="text-inblock-header">Создай  задание</p> 
+						<p class="text-inblock">
+							Опиши просьбу и награду за её выполнение и отправь её другу!
+						</p> 
+					</div>
+
+					<img class="col-md-3 col-xs-3" src="images/ppl-right.svg" height="110">
+				</div>
+
+				<!-- ВТОРОЙ ШАГ -->
+				<div class="row">
+					<br/>
+					<br>
+					<div class="col-md-3 col-xs-3"> <br> <img src="images/2.svg"></div>
+					<div class="col-md-6 col-xs-6">
+						<p class="text-inblock-header">Получи помощь</p>
+						<p class="text-inblock">
+							Узнав о проблеме друзья помогут!
+						</p> 
+					</div>
+					<img class="col-md-3 col-xs-3" src="images/ppl-left.svg" height="110">
+				</div>
+
+				<!-- ТРЕТИЙ ШАГ -->
+				<div class="row">
+					<br/>
+					<br>
+					<br>
+
+					<div class="col-md-3 col-xs-3"> <br> <img src="images/3.svg"> </div>
+					<div class="col-md-6 col-xs-6">
+						<p class="text-inblock-header">Дай печеньку</p>
+						<p class="text-inblock">
+							Скажи другу спасибо, поделившись с ним печенькой/кофе/wi-fi...
+						</p> 
+					</div>
+
+					<img class="col-md-3 col-xs-3" src="images/ppls.svg" height="161">
+				</div>
+
+			</div>
+
+			<!-- ПАНЕЛЬ С ОПИСАНИЕМ -->	
+			<div class="col-md-6">
+				<div class="row col-md-6">
+					<div class="h1">
+						Просто и быстро!
+					</div>
+					<div class="text-front">
+						Полный список заданий всегда доступен в один клик! 
+					</div> 
+				</div>
+				<div class="row col-md-7 col-md-offset-5">
+					<div class="h1">
+						Всегда с вами!
+					</div>						
+					<div class="text-front">
+						Вы можете пользоваться сервисом как с настольного компьютера, так и с мобильного телефона!
+					</div> 
+				</div>
+				<div class="row col-md-6">
+					<div class="h1">
+						Это весело!
+					</div>						
+					<div class="text-front">
+						"Карма" за выполнение заданий покажет, кто настоящий друг! :)
+					</div> 
+				</div>
+				<div class="row col-md-7 col-md-offset-5">
+					<div class="h1">
+						Это удобно!
+					</div>						
+					<div class="text-front">
+						Для нас важно, чтобы ваши задачи решались быстрее, и мы сделали всё от нас зависящее! 
+					</div> 
+				</div>
+				<div class="row col-md-6">
+					<div class="h1">
+						Элементарно!
+					</div>						
+					<div class="text-front">
+						Простой и интуитивно понятный интерфейс - это наша гордость :)
+					</div> 
+				</div>
+			</div>
+		</div>
+		<br><br><br>
+		<div class="row-fluid text-block col-md 12" style="text-align:center"> 
+			
+			<a class="a-inb" href="#">Дай пять!</a>
+			
+			 · 
+			<a class="a-inb" href="#">О нас</a>
+			 · 
+			<a class="a-inb" href="#">Помощь</a>
+			 · 
+			<a class="a-inb" href="#">Политика конфиденциальности</a>
+		</div>
+	</div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.js"></script>
+  </body>
+</html>
