--- a/design/css/style.css
+++ b/design/css/style.css
@@ -22,7 +22,7 @@ html,body{
   margin-left: -15px;
 }
 
-.navbar { min-width: 400px; background: #885E4F;}
+.navbar { min-width: 400px; background: #DC4C26;}
 
 textarea { resize: none }
 
@@ -59,7 +59,7 @@ h1,h2,h3,h4,h5,h6{
 
 
 .vk_btn{
-	background: #885E4F url(../images/vk-btn.svg) no-repeat;
+	background: #DC4C26 url(../images/vk-btn.svg) no-repeat;
 	background-position: 115px 8px;
 	background-size: 20%;
 	text-align: left;
@@ -77,7 +77,7 @@ h1,h2,h3,h4,h5,h6{
 	background: #FFFFFF url(../images/vk-btn-td.svg) no-repeat;
 	background-position: 115px 8px;
 	background-size: 20%;
-	color:#885E4F;
+	color:#DC4C26;
 	/*opacity: .55;*/
 }
 
@@ -98,7 +98,7 @@ h1,h2,h3,h4,h5,h6{
 }
 	/* Блок коричневого цвета с текстом */
 .text-block{
-	background: #885E4F;
+	background: #E8E8E8;
 }
 	/* Серый текст внутри блоков */
 .text-inblock{
@@ -114,7 +114,7 @@ h1,h2,h3,h4,h5,h6{
 	font-weight:300;
 	text-align: center;
 	font-size: 28px;
-	color: #FFFFFF;
+	color: #DC4C26;
 }
 
 	/* Текст на белом фоне */ 
