created models: user, exp, task, comment && added omniauth-vkontakte

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,9 +33,9 @@
       			</div>
 
       			<div class="col-md-2 col-xs-14">
-        			<button type="button" class="btn btn-default navbar-btn navbar-right vk_btn">
+        			<a href="/auth/vkontakte" class="btn btn-default navbar-btn navbar-right vk_btn">
         			<p style="margin-top:8px">Войти через</p>
-        			</button> 
+        			</a> 
         		</div>
       		</div>
     	</nav>
