adding tasks to db

--- a/app/views/messages/share.html.erb
+++ b/app/views/messages/share.html.erb
@@ -7,7 +7,7 @@
     <form role="form">
 
         <div class="input-group">
-            <input class="form-control text-input" onfocus="this.select()" value="http://foo.bar/biz" readonly>
+            <input class="form-control text-input" onfocus="this.select()" value=<%= @share_url %> readonly>
 
             <span class="input-group-btn">
                 <button type="button" class="btn">
