--- a/app/views/layouts/dialog.html.erb
+++ b/app/views/layouts/dialog.html.erb
@@ -11,22 +11,17 @@
 <div class="container">
     <div class="parent_popup">
         <div class="popup">
-            <nav class="navbar"> 
+            <nav class="navbar dialog-bar"> 
                   <div class="fleft">
                       <button type="button" class="btn nav-btn">
                       Back
-                      </button>  
+                      </button>
                     </div>
 
                     <div class="header">
                       Title
                     </div>                
-                    
-                    <div class="fright">
-                      <button type="button" class="btn nav-btn">
-                      Next
-                      </button>
-                    </div>
+
             </nav>
             <%= yield %>
         </div>
