--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -3,19 +3,18 @@
 <div class="row">
     <div class="col-md-12 col-xs-12">
 
-    <%= form_for :job do |f|%>
+    <%= form_for :task, url: messages_path do |f|%>
         
-        <%= f.text_area :task_text ,:class => "form-control text-input", :rows => "5", :placeholder=>"Задание",
+        <%= f.text_area :description ,:class => "form-control text-input", :rows => "5", :placeholder=>"Задание",
                         :onfocus => "if(this.value==\"\") {this.value='Пожалуйста, '}" %>
         <br>
-        <%= f.text_field :award ,:class => "form-control text-input", :placeholder=>"Награда" %>
+        <%= f.text_field :cookie ,:class => "form-control text-input", :placeholder=>"Награда" %>
         <br>
-        <%= f.text_field :date ,:class => "form-control text-input", :placeholder=>"Дата" %>
+        <%= f.text_field :deadline ,:class => "form-control text-input", :placeholder=>"Дата" %>
         <br>
         <%= f.submit "Submit", :class => "btn" %>
     <% end %>
-  
-        
+
     </div>
 </div>
 
