make redirect by user && message -> task

--- a/app/views/layouts/dialog.html.erb
+++ b/app/views/layouts/dialog.html.erb
@@ -13,9 +13,8 @@
         <div class="popup">
             <nav class="navbar dialog-bar"> 
                   <div class="fleft">
-                      <button type="button" class="btn nav-btn">
-                      Back
-                      </button>
+                  
+                      <%= link_to "back", tasks_path, :class => "btn nav-btn" %>
                     </div>
 
                     <div class="header">
