--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
       			</div>
 
       			<div class="col-md-2 col-xs-14">
-        			<a href="/auth/vkontakte" class="btn btn-default navbar-btn navbar-right vk_btn">
+        			<a href="<%=login_path%>" class="btn btn-default navbar-btn navbar-right vk_btn">
         			<p style="margin-top:8px">Войти через</p>
         			</a>
         		</div>
