add share buttons

--- a/app/views/layouts/dialog.html.erb
+++ b/app/views/layouts/dialog.html.erb
@@ -19,7 +19,10 @@
 
                     <div class="header">
                       Title
-                    </div>                
+                    </div>
+                    <div class="fright">
+                    <%= yield(:nav_right_button) %>
+                    </div>             
 
             </nav>
             <%= yield %>
