--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,8 +12,8 @@
       			</div>
 
       			<div class="col-md-2 col-xs-14">
-        			<a href="<%=login_path%>" class="btn btn-default navbar-btn navbar-right vk_btn">
-        			<p style="margin-top:8px">Войти через</p>
+        			<a href="<%=login_path%>" class="navbar-right index-vk_btn">
+        			<p style="margin-left:13px; margin-top:13px">Войти через</p>
         			</a>
         		</div>
       		</div>
@@ -141,7 +141,4 @@
 			<a class="index-a-inb" href="#">Политика конфиденциальности</a>
 		</div>
 	</div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.js"></script>
+   
