--- a/app/views/layouts/dialog.html.erb
+++ b/app/views/layouts/dialog.html.erb
@@ -14,11 +14,11 @@
             <nav class="navbar dialog-bar"> 
                   <div class="fleft">
                   
-                      <%= link_to "back", tasks_path, :class => "btn nav-btn" %>
+                      <%= link_to "Назад", tasks_path, :class => "btn nav-btn"%>
                     </div>
 
-                    <div class="header">
-                      Title
+                    <div class="header  col-md-5 col-md-offset-2">
+                      Новое задание
                     </div>                
 
             </nav>
