--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -3,7 +3,7 @@
 			<div class="col-lg-3 col-xs-0 col-md-2 col-s-1"></div>
 				<div class="col-lg-6 col-xs-12 col-md-8 col-s-10 band-block">
 					<div style="margin-top:2%">
-						<div class="col-lg-1 col-xs-2 col-md-1 col-s-1"> <img class="img-rounded avatar" src="images/avats/0.png" height="60px" width="60px"> </div>
+						<div class="col-lg-1 col-xs-2 col-md-1 col-s-1"> <img class="img-rounded avatar" src="<%= task.user.picture_url %>" height="60px" width="60px"> </div>
 						<div class="col-lg-8 col-xs-8 col-md-9 col-s-9">
 							<p class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12 nickname"> <%= task.user.name %> </p>
 							<div class="row-fluid col-lg-12 col-xs-12 col-md-12 col-s-12">
