--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -34,7 +34,7 @@
 
 
         <br>
-        <%= f.submit "Submit", :class => "btn" %>
+        <%= f.submit "Отправить", :class => "btn" %>
     <% end %>
 
   <script type="text/javascript">
