--- a/app/views/tasks/share.html.erb
+++ b/app/views/tasks/share.html.erb
@@ -11,11 +11,10 @@
 
             <span class="input-group-btn">
                 <button type="button" class="btn">
-                Copy to clipboard
+                Скопировать ссылку
                 </button>  
             </span>
         </div>
     </form>
-    <%= link_to "done", tasks_path %>
-    </div>
+    <%= link_to "Готово", tasks_path, :class => "btn" %>
 </div>
