--- a/app/views/layouts/tasks.html.erb
+++ b/app/views/layouts/tasks.html.erb
@@ -12,20 +12,20 @@
   <body>
   	<div class="container-fluid">
     	<nav class="row-fluid navbar navbar-default navbar-fixed-top" role="navigation">
-            <div class="col-md-1 col-sm-1 col-xs-1 ">
+            <div class="col-md-3 col-sm-3 col-xs-2 ">
               <img src="images/logo_sp.svg" style="margin-top:3px" width="58" height="58" >
         	</div>
 
-            <div class="col-md-10 col-sm-10 col-xs-8 navbar-center">
+            <div class="col-md-5 col-md-offset-1 col-sm-4 col-xs-7 navbar-left">
               <div class=" btn-toolbar btn-group" style="margin-top:13px">
                 <a class="btn active btn-default" href="#">Лента</a>
                 <a class="btn btn-default" href="#">Друзья</a>
-                <a class="btn btn-default" href="#">Профиль</a>
+                <a class="btn btn-default" href="/profiles/show">Профиль</a> <!-- %= link_to "Профиль", profiles_path, :class => "btn" % -->
               </div>
             </div>
 
-            <div class="col-md-1 col-sm-1 col-xs-2 ">
-              <%= link_to "Create" , new_task_path %>
+            <div class="col-md-3 col-sm-2 col-xs-2 " style="margin-top:7px">
+              <%= link_to "+", new_task_path, :class => "btn nav-btn" %>
           </div>
 		</nav>
 	</div>
