--- a/app/views/tasks/share.html.erb
+++ b/app/views/tasks/share.html.erb
@@ -1,27 +1,10 @@
 <% provide(:title, "Поделиться") %>
 
 <% content_for :nav_right_button do %>
-    <%= link_to "Готово", tasks_path, :class => "btn nav-btn" %>
 <% end %>
 
 <div class="row">
     <div class="col-md-12 col-xs-12">
-        <div data-url="<%= task_url(@task.id) %>" class="pluso" data-background="transparent" data-options="big,square,line,horizontal,nocounter,theme=04" data-services="vkontakte,odnoklassniki,facebook,twitter,google,moimir"></div>
-
-    <form role="form">
-
-        <div class="input-group">
-            <input class="form-control text-input" onfocus="this.select()" value="<%= task_url(@task.id) %>" readonly>
-
-            <span class="input-group-btn">
-                <button type="button" class="btn">
-                Скопировать ссылку
-                </button>  
-            </span>
-        </div>
-    </form>
-    </div>
-</div>
 
 <script type="text/javascript">(function() {
   if (window.pluso)if (typeof window.pluso.start == "function") return;
@@ -32,3 +15,24 @@
     var h=d[g]('body')[0];
     h.appendChild(s);
   }})();</script>
+<div data-url="<%= task_url(@task.id) %>" class="pluso" data-background="transparent" data-options="big,square,line,horizontal,nocounter,theme=04" data-services="vkontakte,odnoklassniki,facebook,twitter,google,moimir"></div>
+
+
+    <form role="form">
+
+
+<!--         <div class="input-group"> -->
+            <input class="form-control text-input" onfocus="this.select()" value="<%= task_url(@task.id) %>" readonly>
+
+            <!-- <span class="input-group-btn">
+                <button type="button" class="btn">
+                Скопировать ссылку
+                </button>  
+            </span>     -->
+        <!-- </div> -->
+
+        <%= link_to "Готово", tasks_path, :class => "btn nav-btn" %>
+    </form>
+    </div>
+</div>
+
